# Stratosphere

./: .gitignore  README.md
Engine/: CMakeLists.txt
Engine/include/Engine/: Application.h  ImGuiLayer.h  PerformanceMonitor.h  Renderer.h  SwapChain.h  TrianglesRenderPassModule.h  VulkanContext.h
Engine/include/Structs/: FrameContextStruct.h
Engine/include/assets/: AssetManager.h  MeshAsset.h
Engine/include/utils/: BufferUtils.h  VulkanValidationUtils.h
Engine/shaders/: triangle.vert  triangle.vert.spv
Engine/src/: Application.cpp  AssetManager.cpp  BufferUtils.cpp  GLFWWindow.cpp  GroundPlaneRenderPassModule.cpp  ImGuiLayer.cpp  MeshAssets.cpp  MeshRenderPassModule.cpp  PerformanceMonitor.cpp  Renderer.cpp  SModelRenderPassModule.cpp  SwapChain.cpp  TrianglesRenderPassModule.cpp  VulkanContext.cpp
Sample/: CMakeLists.txt  MySampleApp.h  update.h
Sample/entities/: Tank.json  Turret.json
Sample/src/: MenuManager.cpp  MenuManager.h  MySampleApp.cpp  main.cpp  update.cpp
Sample/systems/: CharacterAnimationSystem.h  CommandSystem.h  MovementSystem.h  RenderSystem.h
